# RustVault

./: .gitignore  Cargo.toml  crypto_wallet.json
src/: main.rs  utils.rs  wallet.rs
