[package]
name = "crypto-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = "0.21.0"  # For elliptic curve cryptography
rand = "0.8.5"        # For generating random numbers (keys)
serde = { version = "1.0", features = ["derive"] }  # For serialization and deserialization
serde_json = "1.0"    # For JSON handling

